Add sass-cache to gitignore.

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-# Compiled source #
+ompiled source #
 ###################
 *.com
 *.class
@@ -35,3 +35,4 @@
 .Trashes
 ehthumbs.db
 Thumbs.db
+*.sass-cache*
